# error-enum-generator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yml
error-enum/: Cargo.toml
error-enum-macros/: Cargo.toml
error-enum-macros/src/: gen.rs  lib.rs
error-enum/src/: lib.rs
examples/: Cargo.toml
examples/src/: lib.rs
