[package]
name = "error-enum-macros"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc_macro_roids = "0.7"
proc-macro2 = "1.0.7"
quote = "1.0.2"
syn = { version = "1.0.15", features = ["extra-traits", "visit"] }
proc-macro-error = "0.4"
strum_helpers = { git = "https://github.com/ethankhall/strum" }